# server_bridge_node

./: QUICKSTART.md  README.md  TELEMETRY_REFERENCE.md  example_output.json  package.xml  setup.cfg  setup.py
files/: CHANGES.md  example_telemetry.json  telemetry_with_velocity.json
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/server_node/lib/server_node/: bridge
install/server_node/share/server_node/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
log/: latest_build
resource/: server_node
server_node/: bridge.py  telemetry_aggregator_node.py
